# re2c

./: .buildinfo  .cvsignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  BUILD.cmake.bazel  BUILD.md  CHANGELOG  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  IDEAS.md  MAINTAINERS.md  MODULE.bazel  Makefile  Makefile.am  Makefile.lib.am  NO_WARRANTY  README  README.in  README.md  WORKSPACE  __alltest.sh  __build.sh  __build_clang.sh  __build_clang_msan.sh  __build_lsan.sh  __build_m32.sh  __build_mingw.sh  __build_nodebug.sh  __build_ubsan.sh  __cmakebuild.sh  __cmakebuild_asan.sh  __cmakebuild_check_headers.sh  __cmakebuild_clang.sh  __cmakebuild_clang_msan.sh  __cmakebuild_glibcxx_debug.sh  (+67 more)
bazel/: BUILD.bazel  bison.bzl  diff_test.bzl  diff_tests.sh  re2c.bzl  re2c_bazel_test.sh  re2c_config.h  rst2txt.bzl  util.bzl
benchmarks/c/: .gitignore  CMakeLists.txt  Makefile.am  README  env.html  known_failures  run.py.in
benchmarks/submatch_dfa_aot/: CMakeLists.txt  Makefile  Makefile.am  bench_submatch_dfa_aot.sh  env.html  known_failures  run.py.in  run.sh  run.sh.in  verify.sh  verify.sh.in
benchmarks/submatch_dfa_jit/: CMakeLists.txt  Makefile.am  bench.cc  env.html
benchmarks/submatch_java/: CMakeLists.txt  Makefile.am  ReTdfa.java  __make.sh  run.py.in
benchmarks/submatch_nfa/: CMakeLists.txt  Makefile.am  bench.cc  env.html
re2c/: .cvsignore  .gitignore  CHANGELOG  CMakeLists.txt  Makefile.am  Makefile.lib.am  Makefile.libre2c_posix.am  README  README.in  __alltest.sh  __build.sh  __build_asan.sh  __build_clang.sh  __build_clang_msan.sh  __build_glibcxx_debug.sh  __build_lsan.sh  __build_m32.sh  __build_mingw.sh  __build_redundant_exports.sh  __build_ubsan.sh  __distcheck.sh  actions.cc  autogen.sh  basics.h  bug2102138-test.sh  build.sh  build_mingw.sh  c99_stdint.h  cases.cc  cases.h  code.cc  code.h  code_names.cc  code_names.h  config.h.cmake.in  config_w32.h  config_w32.h.in  configure.ac  configure.in  cvsclean.sh  (+72 more)
re2c/benchmarks/: README  __bench_utils.sh  __run.sh
re2c/bootstrap/: manual.html  parse_opts.cc  parser.cc  re2c.1  scanner.cc  scanner_lex.cc  y.tab.h
re2c/doc/: help.rst.in  index.html  manpage.rst.in  re2c.ad.in
re2c/examples/: 01_recognizing_integers.i--tags.c  04_parsing_integers_blocks.i.c  05_parsing_integers_conditions.ci.c  07_cxx98.i--tags.c  07_cxx98.i.c  09_etc_passwd.i--tags.c  10_uri_rfc3986.i--tags.c  11_http_rfc7230.i--tags.c  12_float.i--tags.re  13_records.i--tags.c  13_records.i--tags.re  14_options.i--tags.c  18_push_model.if.c  pp-c.re
re2c/htdocs/: index.html  manual.html  manual.html.in
re2c/lessons/: readme.txt
re2c/lib/: bench.cc  lex.h  lex.re  parse.ypp  regcomp.cc  regex.h  regex_impl.h  regexec.cc  regexec_dfa.cc  regexec_nfa_leftmost.cc  regexec_nfa_leftmost_trie.cc  regexec_nfa_posix.cc  regexec_nfa_posix_trie.cc  regfree.cc  test.cc  test.cpp
re2c/libre2c_posix/: lex.h  lex.re  parse.ypp  regcomp.cc  regex-impl.h  regex.h  regex_impl.h  regexec.cc  regexec_dfa.cc  regexec_nfa.cc  regexec_nfa_leftmost.cc  regexec_nfa_posix.cc  regfree.cc  test.cpp
re2c/src/: actions.cc  code.cc  code.h  code_names.cc  compile.cc  compile.h  dfa.cc  dfa.h  enc.cc  enc.h  free_list.h  globals.h  go.h  go_construct.cc  go_destruct.cc  go_emit.cc  go_used_labels.cc  input.cc  input_api.cc  input_api.h  ins.h  main.cc  mbo_getopt.cc  mbo_getopt.h  output.cc  output.h  parser.h  parser.ypp  print.cc  print.h  range.cc  range.h  range_suffix.cc  range_suffix.h  re.h  rule.cc  rule.h  scanner.h  scanner.re  skeleton.cc  (+21 more)
re2c/test/: bug1054496.c  bug116.c  bug116.re  bug1163046.--skeleton.c  bug1163046.S.c  bug1163046.c  bug1187785.c  bug119.bif.c  bug119.gif.c  bug119.if.c  bug119_abort.bif.c  bug119_abort.gif.c  bug119_abort.if.c  bug128.c  bug128.re  bug1297658.c  bug1297658.re  bug1390174.c  bug142.c  bug145.ci.c  bug145.ci.re  bug1454253.c  bug1454253.re  bug1454253.s.c  bug1454253b.s.c  bug147.c  bug1472770.b.c  bug1472770.b.re  bug1472770.c  bug1472770.f.c  bug1472770.s.c  bug1479044.b.c  bug1479044.c  bug1479044.s.c  bug152.c  bug152.c.c  bug1528269.c  bug1529351.c  bug1529351.re  bug1682718.c  (+1380 more)
test/: .cvsignore  BUILD.bazel  __run_unicode_tests.sh  bug1054496.c  bug1054496.re  bug116.c  bug116.re  bug1163046.--skeleton.c  bug1163046.c  bug1163046.re  bug1187785.c  bug1187785.re  bug119.bif.c  bug119.bif.re  bug119.c  bug119.gif.c  bug119.gif.re  bug119.if.c  bug119_abort.bif.c  bug119_abort.c  bug119_abort.gif.c  bug119_abort.gif.re  bug119_abort.if.c  bug119_abort.if.re  bug119_abort.re  bug119_abort_bif.c  bug119_abort_bif.re  bug119_abort_if.c  bug119_gif.c  bug119_if.c  bug119_if.re  bug128.c  bug128.re  bug1297658.c  bug1297658.re  bug1390174.c  bug1390174.re  bug142.c  bug142.re  bug145.c  (+511 more)
test/actions/: error_multiple_entry.c  error_multiple_entry.re  error_multiple_entry_cond.c  error_multiple_entry_cond.re  error_multiple_post_rule.c  error_multiple_post_rule.re  error_multiple_post_rule_cond.c  error_multiple_post_rule_cond.re  error_multiple_pre_rule.c  error_multiple_pre_rule.re  error_multiple_pre_rule_cond_1.c  error_multiple_pre_rule_cond_1.re  error_multiple_pre_rule_cond_2.c  error_multiple_pre_rule_cond_2.re  error_unused_star_entry.c  error_unused_star_entry.re  error_unused_star_post_rule.c  error_unused_star_post_rule.re  error_unused_star_pre_rule.c  error_unused_star_pre_rule.re  special_actions_goto_label.c  special_actions_goto_label.re  special_actions_goto_label_f.c  special_actions_goto_label_f.re  special_actions_loop_switch.c  special_actions_loop_switch.re  special_actions_loop_switch_f.c  special_actions_loop_switch_f.re  special_actions_rec_func.c  special_actions_rec_func.re  special_actions_rec_func_f.c  special_actions_rec_func_f.re  special_actions_with_eof_rule_goto_label.c  special_actions_with_eof_rule_goto_label.re  special_actions_with_eof_rule_loop_switch.c  special_actions_with_eof_rule_loop_switch.re  special_actions_with_eof_rule_rec_func.c  special_actions_with_eof_rule_rec_func.re
test/american_fuzzy_lop/: 001.c  001.re  002.c  002.re  (+16 more)
(+13990 files in other folders)
